--- a/Documentación/bibliography.bib
+++ b/Documentación/bibliography.bib
@@ -1,12 +1,3 @@
-@online{ndlib:libreria,
-  author = {José Ángel García},
-  title = {Github repository},
-  year = 2021,
-  url = {https://github.com/GiulioRossetti/ndlib},
-  urldate = {2021-01-07}
-}
-
-
 @article{granovetter:1978,
     author 		= {Mark Granovetter},
     title 		= {Threshold Models of Collective Behavior},
@@ -137,7 +128,7 @@
     urldate 		= {2021-01-06},
 }
 
- @article{watts:1998,
+@article{watts:1998,
     author 		= {Duncan J. Watts, Steven H. Strogatz},
     title 		= {Collective dynamics of ‘small-world’ networks},
     year 		= {1998},
@@ -145,7 +136,7 @@
     urldate 		= {2021-01-06},
 }
 
-@misc{networkx:2020,
+@online{networkx:2020,
 author = {Varios Autores},
 title = {NetworkX},
 year = {2020},
@@ -154,7 +145,7 @@ urldate = {2021-01-06}
 }
 
 
-@misc{ndlib:2020,
+@online{ndlib:2020,
 author = {Giulio Rossetti},
 title = {NDlib - Network Diffusion Library},
 year = {2020},
@@ -162,7 +153,7 @@ url = {https://ndlib.readthedocs.io/en/latest/index.html},
 urldate = {2021-01-06}
 }
 
-@misc{matplotlib:2020,
+@online{matplotlib:2020,
 author = {John Hunter},
 title = {Matplotlib: Visualization with Python},
 year = {2020},
@@ -170,7 +161,7 @@ url = {https://matplotlib.org/},
 urldate = {2021-01-06}
 }
 
-@misc{pyqt:2020,
+@online{pyqt:2020,
 author = {Riverbank Computing},
 title = {PyQt5},
 year = {2020},
@@ -178,7 +169,7 @@ url = {https://www.riverbankcomputing.com/software/pyqt/},
 urldate = {2021-01-06}
 }
 
-@misc{sqlite:2020,
+@online{sqlite:2020,
 author = {Gerhard Häring},
 title = {SQLite databases},
 year = {2020},
@@ -186,9 +177,10 @@ url = {https://docs.python.org/3/library/sqlite3.html},
 urldate = {2021-01-06}
 }
 
-
-@online{data:01,
-  author = {Network Repository},
-  url = {http://networkrepository.com/},
-  urldate = {2020-11-16}
+@onlin3{filtros:2020,
+author = {Jose Angel Garcia Garcia},
+title = {Filtros de Modelos},
+year = {2020},
+url = {https://docs.google.com/spreadsheets/d/1z7BNBZoBWgpI1OsBOl8HLMe40YfQDvHNvH_RnVEIkSI/edit?usp=sharing},
+urldate = {2021-01-18}
 }
